--- a/templates/base.html
+++ b/templates/base.html
@@ -35,28 +35,18 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('skew.skew_dashboard') }}"
-              >Skew Curve</a
+            <a class="nav-link" href="{{ url_for('main.analyzer-workspace') }}"
+              >Analyzer Workspace</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('spread.spread_dashboard') }}"
-              >Spread</a
-            >
+            <a class="nav-link" href="#">Alerts / Events</a>
           </li>
           <li class="nav-item">
-            <a
-              class="nav-link"
-              href="{{ url_for('macro_overlay.macro_overlay_dashboard') }}"
-              >Macro Overlay</a
-            >
+            <a class="nav-link" href="#">Admin Tools</a>
           </li>
           <li class="nav-item">
-            <a
-              class="nav-link"
-              href="{{ url_for('bs_deviation.bs_deviation_dashboard') }}"
-              >BS Deviation</a
-            >
+            <a class="nav-link" href="#">Strategy Insights</a>
           </li>
         </ul>
       </div>
