update analyzer workspace

--- a/templates/analyzer_workspace.html
+++ b/templates/analyzer_workspace.html
@@ -32,6 +32,31 @@ block content %}
     </div>
   </div>
 
-  <!-- Add more analyzers as needed -->
+  <div class="col-md-4">
+    <div class="card mb-4">
+      <div class="card-body">
+        <h5 class="card-title">Macro Overlay Analyzer</h5>
+        <p class="card-text">Explore macro overlay analysis tools.</p>
+        <a
+          href="{{ url_for('macro_overlay.macro_overlay_dashboard') }}"
+          class="btn btn-primary"
+          >Go to Analyzer</a
+        >
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="card mb-4">
+      <div class="card-body">
+        <h5 class="card-title">BS Deviation Analyzer</h5>
+        <p class="card-text">Explore BS Deviation analysis tools.</p>
+        <a
+          href="{{ url_for('bs_deviation.bs_deviation_dashboard') }}"
+          class="btn btn-primary"
+          >Go to Analyzer</a
+        >
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
