--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('main.analyzer-workspace') }}"
+            <a class="nav-link" href="{{ url_for('main.analyzer_workspace') }}"
               >Analyzer Workspace</a
             >
           </li>
