--- a/templates/analyzer_workspace.html
+++ b/templates/analyzer_workspace.html
@@ -64,7 +64,7 @@ block content %}
         <h5 class="card-title">Iron Condor Analyzer</h5>
         <p class="card-text">Explore Iron Condor analysis tools.</p>
         <a
-          href="{{ url_for('bs_deviation.bs_deviation_dashboard') }}"
+          href="{{ url_for('iron_condor.iron_condor_dashboard') }}"
           class="btn btn-primary"
           >Go to Analyzer</a
         >
