--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,13 @@
     />
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
       href="{{ url_for('static', filename='css/styles.css') }}"
     />
+
     <title>Trading Dashboard</title>
   </head>
   <body>
